# claw-code

./: USAGE.md
rust/: USAGE.md
rust/crates/api/src/: lib.rs  prompt_cache.rs  types.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: compact.rs  config.rs  conversation.rs  debug.rs  feature_flags.rs  file_ops.rs  hooks.rs  ide_bridge.rs  lib.rs  mcp_http.rs  mcp_sse.rs  mcp_stdio.rs  mcp_transport.rs  oauth.rs  prompt.rs  session.rs  session_control.rs  usage.rs  usage_dashboard.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: init.rs  main.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs
rust/crates/telemetry/src/: lib.rs
rust/crates/tools/src/: lib.rs
